[package]
name = "epizentrum"
version = "0.1.0"
edition = "2021"
authors = ["bits0rcerer <25325997+bits0rcerer@users.noreply.github.com>"]
description = "tsunami core library"

[dependencies]
tracing.workspace = true
thiserror.workspace = true

rummelplatz = { git = "https://github.com/bits0rcerer/rummelplatz" }

krnl = "0.0.3"

rand = "0.8.5"
rayon = "1.8.0"

image = "0.24.7"

bytemuck = "1.14.0"
bytemuck_derive = "1.5.0"
smallvec = "1.11.2"

paste = "1.0.14"
libc = "0.2.150"
os_socketaddr = "0.2.5"
socket2 = "0.5.5"
take_mut = "0.2.2"
