[package]
name = "tsunami"
version = "0.1.0"
edition = "2021"
authors = ["bits0rcerer <25325997+bits0rcerer@users.noreply.github.com>"]
description = "A capable Pixelflut client for modern linux"

[dependencies]
epizentrum = { path = "../epizentrum" }

tracing.workspace = true
tracing-subscriber.workspace = true
eyre.workspace = true
clap.workspace = true
