[package]
name = "tsunami"
version = "0.1.0"
edition = "2021"
authors = ["bits0rcerer <25325997+bits0rcerer@users.noreply.github.com>"]
description = "A potent GPU accelerated Pixelflut client for modern Linux written in Rust"

[dependencies]
epizentrum = { path = "../epizentrum" }

tracing.workspace = true
tracing-subscriber.workspace = true
eyre.workspace = true
clap.workspace = true

image = "0.24.7"
